# project_hospital-simulator

./: .gitignore  CMakeLists.txt  Doxyfile  MakefileEva  README.md  TestEva.txt  lecture-notes.txt  main.c  makefile  mycode.c
cmake-build/: CMakeLists.txt
gui-testing/: a.out  glib_unit-test_example.c  testresults.xml
inc/: auto_serializer.h  gtk3.h  hospital_structures.h  persons.h  quick_save.h  seat_rows.h  serialize.h  serializer.h  test.h
src/: auto_serializer.c  gtk3.c  gtk3.h  gtk_test.c  hospital-simulator.glade  hospital-simulator.glade~  hospital_structures.h  main.c  persons.c  persons.h  quick_save.c  seat_rows.c  seat_rows.h  serializer.c  simulator_gui.c  test.c  test.h
tests/: gui_tests.cxx  person_tests.cxx  seat_row_tests.cxx
